some style of add expense button changed

--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -31,7 +31,7 @@
 }
 
 .expense-item__price {
-  background-color: blueviolet;
+  background-color: purple;
   border: 0.15rem solid white;
   border-radius: 0.5rem;
   padding: 0.5rem;
