--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -23,7 +23,7 @@
   padding: 0.5rem;
 }
 
-.new-expense__control input:focus   {
+.new-expense__control input:focus {
   border: 1px solid purple;
   /* border: none; */
   outline: none;
@@ -35,15 +35,17 @@
 
 .new-expense__actions button {
   all: unset;
-  background-color: blueviolet;
+  box-sizing: border-box;
+  cursor: pointer;
+  width: 80%;
+  text-align: center;
+  border: 0.15rem solid white;
+  background-color: purple;
+  outline: black;
   padding: 0.5rem;
+  height: 2.5rem;
   color: white;
-  border-radius: 0.25rem;
-  box-shadow: 0 0 0.5rem black;
+  border-radius: 0.5rem;
   position: absolute;
   right: 0;
-}
-
-.new-expense__actions button:active {
-  box-shadow: inset 0 0 0.5rem black;
 }
