--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -39,7 +39,6 @@
   cursor: pointer;
   width: 80%;
   text-align: center;
-  border: 0.15rem solid white;
   background-color: purple;
   outline: black;
   padding: 0.5rem;
@@ -48,4 +47,12 @@
   border-radius: 0.5rem;
   position: absolute;
   right: 0;
+}
+
+.new-expense__actions button:focus {
+  border: 1px solid white;
+}
+
+.new-expense__actions button:active {
+  background-color: rgb(167, 1, 167);
 }
