--- a/src/components/Expenses/ExpenseFilter.css
+++ b/src/components/Expenses/ExpenseFilter.css
@@ -1,4 +1,4 @@
-.expense_action--filter {
+.expenses-filter {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -6,7 +6,7 @@
   margin: auto;
 }
 
-.expense_action--filter select {
+.expenses-filter select {
   padding: 0.5rem;
   width: 10rem;
   outline: none;
@@ -15,6 +15,6 @@
   background-color: white;
 }
 
-.expense_action--filter label{
+.expenses-filter label {
   padding: 0.5rem;
 }
