delete button for clear localeStorage added

--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,11 @@
   width: 90%;
   margin: auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   color: white;
   font-size: 2rem;
   text-align: center;
 }
+
