--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: lightgray;
+  background-color: white;
   width: 95%;
   margin: 1rem auto;
   padding: 0 1rem;
@@ -31,7 +31,7 @@
 }
 
 .expense-item__price {
-  background-color: purple;
+  background-color: rgb(34, 133, 142);
   border: 0.15rem solid white;
   border-radius: 0.5rem;
   padding: 0.5rem;
