--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -1,5 +1,6 @@
 .new-expense {
-  background-color: rgb(235, 148, 247);
+  background-color: rgb(208, 242, 255);
+  border: 1px solid rgb(116, 199, 255);
   padding: 3rem;
   width: 90%;
   margin: 1rem auto;
